--- a/app/src/main/res/layout/fragment_noticias.xml
+++ b/app/src/main/res/layout/fragment_noticias.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:background="#eeeeee"
     tools:context=".Vista.NoticiasFragment">
 
     <ScrollView
@@ -25,7 +25,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/business" />
 
@@ -35,7 +35,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/sports"/>
 
@@ -45,7 +45,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/science"/>
 
@@ -55,7 +55,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/entertainment"/>
 
@@ -65,7 +65,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/technology"/>
 
@@ -75,7 +75,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:scaleType="fitXY"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 android:src="@drawable/medical"/>
         </LinearLayout>
