--- a/app/src/main/res/layout/item_noticia.xml
+++ b/app/src/main/res/layout/item_noticia.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:textSize="22sp"
+            android:background="@android:color/transparent"
             android:textStyle="bold"/>
 
 
