FC20181108 - Se cambia el background

--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -11,6 +11,6 @@
         android:text="@string/favoritos"
         android:textSize="42sp"
         android:gravity="center"
-        android:background="@drawable/background" />
+        android:background="#eeeeee" />
 
 </FrameLayout>
