--- a/app/src/main/res/layout/item_noticia.xml
+++ b/app/src/main/res/layout/item_noticia.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/imageViewFoto"
             android:layout_width="match_parent"
-            android:background="@android:color/white"
+            android:background="@android:color/transparent"
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
@@ -29,8 +29,6 @@
             android:textSize="22sp"
             android:background="@android:color/transparent"
             android:textStyle="bold"/>
-
-
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
