--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -9,11 +9,15 @@
 
     <ImageView
         android:id="@+id/imageViewPresentacion"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:padding="40dp"
-        android:src="@drawable/news" />
-</RelativeLayout>
+        android:src="@drawable/splash"
+        android:scaleType="centerCrop"/>
+
+
+ >
+</FrameLayout>
