--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -3,14 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Vista.FavoritosFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/favoritos"
-        android:textSize="42sp"
-        android:gravity="center"
-        android:background="#eeeeee" />
+    <com.airbnb.lottie.LottieAnimationView
 
+        android:id="@+id/animation_view"
+        android:layout_marginRight="40dp"
+
+        android:layout_gravity="center"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+
+        app:lottie_imageAssetsFolder="assets"
+        app:lottie_autoPlay="true"
+
+        app:lottie_fileName="animacionFavoritos.json"
+        app:lottie_loop="true"
+        />
 </FrameLayout>
