--- a/app/src/main/res/layout/item_noticia.xml
+++ b/app/src/main/res/layout/item_noticia.xml
@@ -1,34 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="2dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#ffffff"
 
-    <LinearLayout
+    android:elevation="20dp">
+
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:elevation="20dp"
+        android:layout_margin="10dp">
 
-        <ImageView
-            android:id="@+id/imageViewFoto"
-            android:layout_width="match_parent"
-            android:background="@android:color/transparent"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            tools:src="@drawable/news"/>
-
-        <TextView
-            android:id="@+id/textViewTitulo"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textSize="22sp"
-            android:background="@android:color/transparent"
-            android:textStyle="bold"/>
-    </LinearLayout>
+            android:padding="10dp"
+            android:elevation="20dp">
 
-</android.support.v7.widget.CardView>
+            <ImageView
+                android:id="@+id/imageViewFoto"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                tools:src="@drawable/news"
+                />
+
+            <TextView
+                android:id="@+id/textViewTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:text="TITULO"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_below="@id/imageViewFoto"/>
+
+            <TextView
+                android:id="@+id/textViewDescripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:text="Contenido"
+                android:textSize="12sp"
+                android:textColor="#bb000000"
+                android:layout_below="@id/textViewTitulo"/>
+
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+ </LinearLayout>
