--- a/app/src/main/res/layout/item_noticia.xml
+++ b/app/src/main/res/layout/item_noticia.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/news"
+                tools:src="@drawable/no_image"
                 />
 
             <TextView
@@ -40,16 +40,6 @@
                 android:textColor="#000000"
                 android:layout_below="@id/imageViewFoto"/>
 
-            <TextView
-                android:id="@+id/textViewDescripcion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="Contenido"
-                android:textSize="12sp"
-                android:textColor="#bb000000"
-                android:layout_below="@id/textViewTitulo"/>
 
 
         </RelativeLayout>
