--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,13 +3,15 @@
 
     <item
         android:id="@+id/navigation_inicio"
-        android:icon="@drawable/inicio"
+        android:icon="@drawable/ic_home"
         android:title="Inicio"/>
 
     <item
         android:id="@+id/navigation_favorito"
-        android:icon="@drawable/health"
+        android:icon="@drawable/ic_favorite"
         android:title="Favoritos"/>
+
+
 
 
 </menu>
