Color del bottomtab

--- a/app/src/main/res/layout/item_noticia.xml
+++ b/app/src/main/res/layout/item_noticia.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/imageViewFoto"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 tools:src="@drawable/no_image"
                 />
 
