--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,10 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="100dp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:text="No Hay Favoritos"
+        android:text="@string/nohayfavoritos"
         android:textColor="#dc000000"
         android:textSize="40sp" />
 
@@ -23,15 +22,12 @@
 
         android:id="@+id/animation_view"
         android:layout_width="300dp"
-
         android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="40dp"
-
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
         app:lottie_autoPlay="true"
         app:lottie_fileName="animacionFavoritos.json"
 
         app:lottie_imageAssetsFolder="assets"
         app:lottie_loop="true" />
-</LinearLayout>
+</RelativeLayout>
