--- a/app/src/main/res/layout/fragment_noticias.xml
+++ b/app/src/main/res/layout/fragment_noticias.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButtonBussines"
+                android:id="@+id/imageButtonBusiness"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
