--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,16 @@
         android:layout_above="@id/bottomNavigationViewId"
         android:layout_below="@id/tabLayout"/>
 
+    <FrameLayout
+        android:id="@+id/idContainer"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomNavigationViewId"
+        android:layout_below="@id/tabLayout"/>
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationViewId"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
