--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -11,9 +11,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"
         android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
         android:text="@string/nohayfavoritos"
         android:textColor="#dc000000"
         android:textSize="40sp" />
