--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_login"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/ic_user"
         android:title="Mi cuenta"/>
 
 </menu>
