--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -24,6 +24,7 @@
         android:gravity="center"
         android:layout_marginTop="50dp"/>
     <Button
+        android:id="@+id/registromail"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -39,7 +40,7 @@
         android:layout_marginTop="25dp"
         android:background="@color/selectedNavigationBottom"
         android:textColor="#FFFFFF"
-        android:text="Email"/>
+        android:text="Google"/>
 
 
     <TextView
