--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -19,6 +19,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:imeOptions="actionSearch"
         android:hint="@string/buscar"
         android:textColorHint="#595858"
         android:textColor="#595858"
