--- a/app/src/main/res/layout/fragment_busqueda.xml
+++ b/app/src/main/res/layout/fragment_busqueda.xml
@@ -1,44 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".Vista.BusquedaFragment">
 
-    <TextView
-        android:id="@+id/busqueda1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="42sp"
-        android:layout_margin="14dp"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/busqueda2"
+        <TextView
+            android:id="@+id/busqueda1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="42sp"
+            android:layout_margin="14dp"/>
+
+        <TextView
+            android:id="@+id/busqueda2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="35sp"
+            android:layout_margin="14dp"/>
+
+        <TextView
+            android:id="@+id/busqueda3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="29sp"
+            android:layout_margin="14dp"/>
+
+        <TextView
+            android:id="@+id/busqueda4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="14dp"/>
+
+        <TextView
+            android:id="@+id/busqueda5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_margin="14dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35sp"
-        android:layout_margin="14dp"/>
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="12dp">
 
-    <TextView
-        android:id="@+id/busqueda3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="29sp"
-        android:layout_margin="14dp"/>
+        <ImageButton
+            android:id="@+id/imageView1"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/lanacion"
+            android:scaleType="fitCenter"/>
 
-    <TextView
-        android:id="@+id/busqueda4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:layout_margin="14dp"/>
+        <ImageButton
+            android:id="@+id/imageView2"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/infobae"
+            android:scaleType="fitCenter"/>
 
-    <TextView
-        android:id="@+id/busqueda5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_margin="14dp"/>
+        <ImageButton
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/googlenews"
+            android:scaleType="fitCenter"/>
 
-</LinearLayout>
+        <ImageButton
+            android:id="@+id/imageView4"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/cnn"
+            android:scaleType="fitCenter"/>
+
+        <ImageButton
+            android:id="@+id/imageView5"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:layout_margin="6dp"
+            android:src="@drawable/lagaceta"
+            android:scaleType="fitCenter"/>
+    </LinearLayout>
+
+</FrameLayout>
