--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:padding="40dp"
-        android:src="@drawable/splash"
+        android:src="@drawable/screen"
         android:scaleType="centerCrop"/>
 
 
