--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:src="@drawable/fondonews"
+        android:src="@drawable/bannerlogin"
         android:scaleType="centerCrop"/>
 
 
@@ -23,15 +23,7 @@
         android:textColor="#000000"
         android:gravity="center"
         android:layout_marginTop="50dp"/>
-    <Button
-        android:id="@+id/registromail"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:background="@color/selectedNavigationBottom"
-        android:textColor="#FFFFFF"
-        android:text="Email"/>
+
 
     <Button
         android:layout_width="200dp"
