--- a/app/src/main/res/layout/fragment_noticia_detalle.xml
+++ b/app/src/main/res/layout/fragment_noticia_detalle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,16 +7,62 @@
     android:layout_height="match_parent"
     tools:context=".Vista.NoticiaDetalleFragment">
 
-    <!--<WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/webView">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </WebView>
--->
+            <ImageView
+                android:id="@+id/imageViewDetalle"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                />
 
-    <include layout="@layout/toolbar" />
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardViewDetalle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardElevation="2dp"
+                app:cardCornerRadius="10dp"
+                app:cardPreventCornerOverlap="false"
+                app:cardUseCompatPadding="true">
 
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-</FrameLayout>
+                        <TextView
+                            android:id="@id/textViewTitulo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textSize="22sp"/>
+
+                        <TextView
+                            android:id="@+id/textViewDescripcion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"/>
+
+                </LinearLayout>
+            </ScrollView>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/imageButtonVerMas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchorGravity="right|bottom"
+            app:layout_anchor="@+id/cardViewDetalle"
+            android:layout_margin="16dp"
+            app:backgroundTint="@android:color/white"
+            android:src="@drawable/vermas" />
+
+</android.support.design.widget.CoordinatorLayout>
