--- a/app/src/main/res/menu/menu_detalle.xml
+++ b/app/src/main/res/menu/menu_detalle.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/app_bar_share"
-        android:icon="?attr/actionModeShareDrawable"
+        android:icon="@drawable/whatsapp"
         android:title="Compartir"
         app:showAsAction="always" />
 </menu>
