--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -22,24 +22,19 @@
         android:textSize="20dp"
         android:textColor="#000000"
         android:gravity="center"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="100dp"/>
 
 
-    <Button
-        android:layout_width="200dp"
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
-        android:background="@color/selectedNavigationBottom"
-        android:textColor="#FFFFFF"
-        android:text="Google"/>
+        android:id="@+id/botonGoogle"
+
+        />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ya tienes una cuenta? Inicia sesion"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+
         />
 </LinearLayout>
