--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#5b5b99</color>
+    <color name="colorPrimaryDark">#5b5b99</color>
     <color name="colorAccent">#FF4081</color>
     <color name="selected">#9879b79f</color>
-    <color name="selectedNavigationBottom">#6B38FB</color>
-
+    <color name="selectedNavigationBottom">#5b5b99</color>
 </resources>
