--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -28,7 +28,60 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:id="@+id/imageView1"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/lanacion"
+            android:scaleType="fitCenter"/>
 
+        <ImageButton
+            android:id="@+id/imageView2"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/infobae"
+            android:scaleType="fitCenter"/>
+
+        <ImageButton
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/googlenews"
+            android:scaleType="fitCenter"/>
+
+        <ImageButton
+            android:id="@+id/imageView4"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_margin="6dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:src="@drawable/cnn"
+            android:scaleType="fitCenter"/>
+
+        <ImageButton
+            android:id="@+id/imageView5"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:layout_margin="6dp"
+            android:src="@drawable/lagaceta"
+            android:scaleType="fitCenter"/>
+
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/contenedor"
         android:layout_width="match_parent"
