FC20181211 - Se modifica el color del editText de buscar para que coincida con el de la App.

--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -26,6 +26,7 @@
         android:textColorLink="#595858"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:theme="@style/MyEditTextTheme"/>
         />
     <LinearLayout
         android:layout_width="match_parent"
