--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     tools:context=".Vista.BuscarActivity">
 
-    <include layout="@layout/toolbar" />
 
     <EditText
         android:id="@+id/editTextSearch"
@@ -27,6 +26,7 @@
         android:textColorLink="#595858"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:theme="@style/MyEditTextTheme"/>
         />
     <LinearLayout
         android:layout_width="match_parent"
