IM20181212 - Pantalla del login

--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -14,24 +14,56 @@
         android:src="@drawable/bannerlogin"
         android:scaleType="centerCrop"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_marginTop="50dp"
+            android:id="@+id/imageViewFoto"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/textViewNombre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="36sp"
+                    android:layout_gravity="center"/>
+
+                <Button
+                    android:id="@+id/buttonSignOut"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/signout"
+                    android:textSize="22sp"/>
+
+            </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Regístrate con:"
+        android:text="Regístrate:"
         android:textSize="20dp"
         android:textColor="#000000"
         android:gravity="center"
-        android:layout_marginTop="100dp"/>
-
+        android:layout_marginTop="25dp"/>
 
     <com.google.android.gms.common.SignInButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
-        android:id="@+id/botonGoogle"
-
-        />
+        android:id="@+id/botonGoogle"/>
 
 </LinearLayout>
