--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -17,7 +17,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
         <ImageView
             android:layout_marginTop="50dp"
@@ -27,43 +28,38 @@
             android:layout_gravity="center"
             android:scaleType="centerCrop"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/textViewNombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_gravity="center"/>
 
-                <TextView
-                    android:layout_marginTop="20dp"
-                    android:id="@+id/textViewNombre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="36sp"
-                    android:layout_gravity="center"/>
-
-                <Button
-                    android:id="@+id/buttonSignOut"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/signout"
-                    android:textSize="22sp"/>
-
-            </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Regístrate:"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:gravity="center"
-        android:layout_marginTop="25dp"/>
-
-    <com.google.android.gms.common.SignInButton
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="25dp"
-        android:id="@+id/botonGoogle"/>
+        android:layout_gravity="center">
+
+        <com.google.android.gms.common.SignInButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/botonGoogle"/>
+
+        <Button
+            android:id="@+id/buttonSignOut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/signout"
+            android:padding="25dp"
+            android:visibility="invisible"
+            android:textSize="18sp"/>
+
+    </FrameLayout>
 
 </LinearLayout>
