--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -18,7 +18,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:imeOptions="actionSend"
+        android:imeOptions="actionGo"
+        android:inputType="text"
         android:maxLines="1"
         android:hint="@string/buscar"
         android:textColorHint="#595858"
